--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdingsparser"
-version = "0.1.0-alpha.7"
+version = "0.1.0-alpha.16"
 description = "A program that parses 13F reports filed with the SEC."
 authors = ["mhadam <michael@hadam.us>"]
 repository = "https://github.com/mhadam/holdingsparser"
@@ -19,6 +19,8 @@ python = "^3.9"
 beautifulsoup4 = "^4.9.3"
 lxml = "^4.6.3"
 requests = "^2.25.1"
+typer = {extras = ["all"], version = "^0.3.2"}
+requests-random-user-agent = "^2021.4.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
