--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdingsparser"
-version = "0.1.0-alpha.19"
+version = "0.1.0-alpha.20"
 description = "A program that parses 13F reports filed with the SEC."
 authors = ["mhadam <michael@hadam.us>"]
 repository = "https://github.com/mhadam/holdingsparser"
@@ -9,7 +9,6 @@ license = "MIT License"
 packages = [
     { include = "holdingsparser" },
 ]
-include = ["xslfiles/13F-HR.xsl"]
 
 [tool.poetry.scripts]
 holdingsparser = 'holdingsparser.__main__:main'
@@ -17,10 +16,10 @@ holdingsparser = 'holdingsparser.__main__:main'
 [tool.poetry.dependencies]
 python = "^3.9"
 beautifulsoup4 = "^4.9.3"
-lxml = "^4.6.3"
 requests = "^2.25.1"
 typer = {extras = ["all"], version = "^0.3.2"}
 requests-random-user-agent = "^2021.4.10"
+untangle = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
