--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "holdingsparser"
-version = "0.1.0-alpha.22"
+version = "3.0.0"
 description = "A program that parses 13F reports filed with the SEC."
 authors = ["mhadam <michael@hadam.us>"]
 repository = "https://github.com/mhadam/holdingsparser"
